--- a/css/style.css
+++ b/css/style.css
@@ -659,6 +659,9 @@ body.light .deferred-sub { color: #64748b; }
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.video-preview.mirrored {
     transform: scaleX(-1);
 }
 
